# macro-reports

./: .coverage  README.md  pyproject.toml
src/macro_reports/: __main__.py  cli.py
src/macro_reports/io/: csv_reader.py
src/macro_reports/render/: table.py
src/macro_reports/reports/: average_gdp.py  base.py  registry.py
tests/: test_average_gdp_report.py  test_cli.py  test_csv_reader.py  test_registry.py  test_table.py
